refactor: Add validations, JavaDoc and optimize DB queries